fix: use mutable list for daytype mapper